--- a/latex/command.tex
+++ b/latex/command.tex
@@ -1,4 +1,5 @@
 \newcommand{\de}{\mathrm{d}}
+\newcommand{\DD}{\mathrm{D}}
 \newcommand{\pe}{\partial}
 
 \newcommand{\dsp}{\displaystyle}
@@ -25,8 +26,4 @@
 \newcommand{\var}{\text{var}}
 \newcommand{\cov}{\text{cov}}
 
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{proposition}[theorem]{Proposition}
-\newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{corollary}[theorem]{Corollary}
-\newtheorem{remark}[theorem]{Remark}
+\newcommand{\red}{\textcolor{red}}
