Updates from Overleaf

--- a/latex/citation.bib
+++ b/latex/citation.bib
@@ -24,3 +24,28 @@
 	pages = {1153--1160},
 	file = {KeysR_1981_Cubic_convolution_interpolation_for_digital_image_processing.pdf:C\:\\Ryan\\Paper_Zotero\\Books\\Numerical\\General\\KeysR_1981_Cubic_convolution_interpolation_for_digital_image_processing.pdf:application/pdf},
 }
+
+@article{finufft_1,
+	title = {A parallel non-uniform fast {Fourier} transform library based on an "exponential of semicircle" kernel},
+	url = {http://arxiv.org/abs/1808.06736},
+	urldate = {2021-12-18},
+	journal = {arXiv:1808.06736 [cs, math]},
+	author = {Barnett, Alex H. and Magland, Jeremy F. and Klinteberg, Ludvig af},
+	month = apr,
+	year = {2019},
+	note = {arXiv: 1808.06736},
+	keywords = {⛔ No DOI found, 65T50, 65T40, 65Y05, 68N01, Computer Science - Mathematical Software, Mathematics - Numerical Analysis},
+	annote = {Comment: 25 pages, 9 figures},
+}
+
+@article{finufft_2,
+	title = {Aliasing error of the exp\$({\textbackslash}beta {\textbackslash}sqrt\{1-z{\textasciicircum}2\})\$ kernel in the nonuniform fast {Fourier} transform},
+	url = {http://arxiv.org/abs/2001.09405},
+	journal = {arXiv:2001.09405 [cs, math]},
+	author = {Barnett, A. H.},
+	month = oct,
+	year = {2020},
+	note = {arXiv: 2001.09405},
+	keywords = {⛔ No DOI found, 65T50, 42A38, Mathematics - Numerical Analysis},
+	annote = {Comment: 18 pages, 2 figures; in press at Appl. Comput. Harmon. Anal.; updated Rmk 4 in light of revised Potts-Tasche preprint},
+}
