--- a/latex/CompPDEs_FinalProj.tex
+++ b/latex/CompPDEs_FinalProj.tex
@@ -79,20 +79,86 @@ We first investigate the property of some interpolation scheme when used in \sml
 \end{align*}
 This is because this problem is enough to show the properties of various interpolation schemes, and it is easy to visualize so that we can determine the nature of the error produced. Variable velocity case would not help with our investigation, since timestep error would pollute the interpolation error. %And it is harder to justify \eqref{eq:linear_adv} in 1D when velocity is non-constant and thus compressible (but possible, see \cite[(1-3)]{diamantakis}). 
 
-We set the domain to be $[0,1)$ periodic, and solve for $t\in [0,1]$. $u = 1$ constant so that at $T = 1$, the tracer should be advection around the domain to its original position. This provide us with a test of accuracy of the solution. Since $u$ is constant, we know the departure points a priori thus interpolation is the only source of errors. There is no error in time, we fix the timestep constant as 7 (this is an odd number, and $Nx$ is always even, to ensure that we are not landing on a grid point). To investigate the order of convergence for the interpolation method, we vary the spacial resolution. We solve the problem with two initial conditions, one power of trigonometric function (refer this to ``sinp'') and the other a step function:
+We set the domain to be $[0,1)$ periodic, and solve for $t\in [0,1]$. $u = 1$ constant so that at $T = 1$, the tracer should be advection around the domain to its original position. This provide us with a test of accuracy of the solution. Since $u$ is constant, we know the departure points a priori thus interpolation is the only source of errors. There is no error in time, we fix the timestep constant as 7 (this is an odd number, and $Nx$ is always even, to ensure that we are not landing on a grid point). To investigate the order of convergence for the interpolation method, we vary the spacial resolution. We solve the problem with a power of trigonometric function initial condition:
 \begin{align*}
-    c(x,0) &= [\sin(\pi*x)]^p \hspace{1cm}\text{with }p = 40;\\
-    c(x,0) &= \chi_{(1/4,1/2)}.
+    c(x,0) &= [\sin(\pi*x)]^p \hspace{1cm}\text{with }p = 40.
 \end{align*}
 
-We investigate a handful of interpolation methods implemented in MATLAB's \texttt{interp1} function. (We do not use Lagrange polynomial interpolation mostly since I could not find a good implementation in MATLAB available.\footnote{In my search, I saw claims that there is a reason why (quadratic and cubic) Lagrange polynomial is not implemented in MATLAB, and it is because it is a bad idea. But I could not figure out why it is a bad idea. I don't think it is because of the Runge's phenomenon since it is only application when the polynomial order is higher than 3.}) We start with \texttt{linear}, \texttt{cubic}\footnote{not cubic Lagrangian, but instead cub interpolation in \cite{keys_cubic_1981}.}, and \texttt{spline} since they share the same properties.
+We investigate a handful of interpolation methods implemented in MATLAB's \texttt{interp1} function as well as spectral interpolation method based on FINUFFT \cite{finufft_1,finufft_2}. (We do not use Lagrange polynomial interpolation mostly since I could not find a good implementation in MATLAB available.\footnote{In my search, I saw claims that there is a reason why (quadratic and cubic) Lagrange polynomial is not implemented in MATLAB, and it is because it is a bad idea. But I could not figure out why it is a bad idea. I don't think it is because of the Runge's phenomenon since it is only application when the polynomial order is higher than 3.}) We start with \texttt{linear}, which is Lagrange linear interpolation. Fig. \ref{fig:1D_cons_linear_} shows the result: the left is comparison of the numerical solutions to the truth, and the right is the plot for order of convergence. We see that the error is mainly diffusive, and the order of the interpolation is second. For constant velocity, \sml\;method is equivalent to the upwind method when the CFL number is less then one. Therefore it is reassuring to see that the nature of the error is the same (diffusive).
 \begin{figure}[H]
     \centering
-    \includegraphics{figs/}
-    \includegraphics{figs/}
-    \caption{}\label{fig:}
+    \includegraphics{figs/1D_cons_linear_sol}
+    \includegraphics{figs/1D_cons_linear_convord}
+    \caption{}\label{fig:1D_cons_linear_}
+\end{figure}
+Now we look at \texttt{cubic}, which is not cubic Lagrangian, but instead the cubic interpolation in \cite{keys_cubic_1981} and \texttt{spline}, cubic spline. Fig. \ref{fig:1D_cons_cubic_} and Fig. \ref{fig:1D_cons_spline_} shows the result for \texttt{cubic} and \texttt{spline} respectively. For both methods, the error is both diffusive and dispersive. The convergence order of \texttt{cubic} is third, this corroborate that this is not cubic Lagrangian, since it should be of fourth order. Cubic \texttt{spline} is of fourth order, as we expected.
+\begin{figure}[H]
+    \centering
+    \includegraphics{figs/1D_cons_cubic_sol}
+    \includegraphics{figs/1D_cons_cubic_convord}
+    \caption{}\label{fig:1D_cons_cubic_}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics{figs/1D_cons_spline_sol}
+    \includegraphics{figs/1D_cons_spline_convord}
+    \caption{}\label{fig:1D_cons_spline_}
+\end{figure}
+Next, FINUFFT. Since our data is periodic and on a regular grid, we can calculate its Fourier representation using regular \texttt{fft}. Then to evaluate the Fourier series on an nonuniform mesh (for non-constant velocity case), we use FINUFFT type 2 \cite{finufft_1}. This means that to interpolate $N$ non-uniform points from $N$ uniform known data, the cost is $O(N\log N)$ instead of $O(N^2)$. In comparison, all other interpolation method presented here is of cost $O(N)$. Spectral interpolation is more expensive, but not prohibitively so. Fig. \ref{fig:1D_cons_finufft_} shows the result. We see that the interpolation using a coarse space grid is still accurate, though there is a small magnitude oscillation on the two side where the truth is constant. The dense space grid result is perfect. For this grid we have enough points to fully represent the initial conditions Fourier spectrum. Also note that the order of convergence is indeed spectral.
+\begin{figure}[H]
+    \centering
+    \includegraphics{figs/1D_cons_finufft_sol}
+    \includegraphics{figs/1D_cons_finufft_convord}
+    \caption{}\label{fig:1D_cons_finufft_}
+\end{figure}
+Finally, we study \texttt{pchip} and \texttt{makima}. They are similar in that they are both piecewise polynomial of order the most three, and they are designed to prevent overshoot. Fig. \ref{fig:1D_cons_pchip_} (resp. Fig. \ref{fig:1D_cons_makima_}) shows the result for \texttt{pchip} (resp. \texttt{makima}). The error is diffusive, it is also dispersive since the peak is asymmetric. But there is no undershoot on the left of the peak compared to \texttt{cubic} and \texttt{spline} in Fig. \ref{fig:1D_cons_cubic_} and Fig. \ref{fig:1D_cons_spline_}. This is a good feature since a negative tracer concentration $c$ is nonphysical (cf. limiters). The order of convergence of these two methods is not the same as the above methods. The uniform norm convergence order is one less than the convergence order in other norms. This is probably due to the corrections at extrema. 
+\begin{figure}[H]
+    \centering
+    \includegraphics{figs/1D_cons_pchip_sol}
+    \includegraphics{figs/1D_cons_pchip_convord}
+    \caption{}\label{fig:1D_cons_pchip_}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics{figs/1D_cons_makima_sol}
+    \includegraphics{figs/1D_cons_makima_convord}
+    \caption{}\label{fig:1D_cons_makima_}
 \end{figure}
 
+The truth strength of \texttt{phip} and \texttt{makima} shows when we try to use this method to advect a step function, and that is what we will experiment on now. We set the initial condition to be a step function:
+\begin{align*}
+    c(x,0) &= \chi_{(1/4,1/2)}.
+\end{align*}
+We first show the result for \texttt{linear} in Fig. \ref{fig:1D_step_cons_linear_}. We see that the error is still diffusive, but the order of convergence is no longer one. This is because the convergence theory is based on Taylor series, which clearly does not apply for a step function.
+\begin{figure}[H]
+    \centering
+    \includegraphics{figs/1D_step_cons_linear_sol}
+    \includegraphics{figs/1D_step_cons_linear_convord}
+    \caption{}\label{fig:1D_step_cons_linear_}
+\end{figure}
+The order of convergence result does not look too difference from the right plot of Fig. \ref{fig:1D_step_cons_linear_} for \texttt{cubic}, \texttt{spline}, \texttt{pchip}, and \texttt{makima}, thus we will not show them. But the qualitative nature of the error are vert different and it is worse looking at and analyzing. \texttt{cubic} and \texttt{spline} has large oscillation near the discontinuity accompanied with overshoot and undershoot, as shown in Fig. \ref{fig:1D_step_cons_cubic_sol}.
+\begin{figure}[H]
+    \centering
+    \includegraphics{figs/1D_step_cons_cubic_sol}
+    \includegraphics{figs/1D_step_cons_spline_sol}
+    \caption{}\label{fig:1D_step_cons_cubic_sol}
+\end{figure}
+In comparison \texttt{pchip} and \texttt{makima} does not have such issue, as shown in Fig. \ref{fig:1D_step_cons_pchip_sol}. This suggests that these two interpolation scheme is good for solving problems with discontinuities, say from shock. 
+\begin{figure}[H]
+    \centering
+    \includegraphics{figs/1D_step_cons_pchip_sol}
+    \includegraphics{figs/1D_step_cons_makima_sol}
+    \caption{}\label{fig:1D_step_cons_pchip_sol}
+\end{figure}
+Finallt, we show the result from FINUFFT in Fig. \ref{1D_step_cons_finufft_sol}. There is oscillation at the smallest scale of the resolution. This is likely due to the fact that for a discontinuous function, the Fourier coefficient decays very slowly. This fact is also represented in the error graph, now in \texttt{loglog} form, we can see that the error only converges in first order. 
+\begin{figure}[H]
+    \centering
+    \includegraphics{figs/1D_step_cons_finufft_sol}
+    \includegraphics{figs/1D_step_cons_finufft_convord}
+    \caption{}\label{fig:1D_step_cons_finufft_}
+\end{figure}
+
+Wrapping up this section, we have experimentally investigated the nature of the error and the order of convergence of various interpolation methods implemented in MATLAB's \texttt{interp1} function as well as a spectral interpolation method. We will use \texttt{linear}, \texttt{cubic}, \texttt{spline}, and FINUFFT for the future sections. We will not use \texttt{pchip} and \texttt{makima} since they are only significantly different when the solution is discontinuous, but all our future example will be continuous. Also, they will make the order of convergence study of the full \sml\;scheme more confusing. But they should be considered when we run into future problems when there is discontinues in the solutions. 
 
 
 \section{Semi-Lagrangian Method for 2D Linear Advection}\label{sec:linear_adv}
