--- a/latex/CompPDEs_FinalProj.tex
+++ b/latex/CompPDEs_FinalProj.tex
@@ -79,7 +79,7 @@ We first investigate the property of some interpolation scheme when used in \sml
 \end{align*}
 This is because this problem is enough to show the properties of various interpolation schemes, and it is easy to visualize so that we can determine the nature of the error produced. Variable velocity case would not help with our investigation, since timestep error would pollute the interpolation error. %And it is harder to justify \eqref{eq:linear_adv} in 1D when velocity is non-constant and thus compressible (but possible, see \cite[(1-3)]{diamantakis}). 
 
-We set the domain to be $[0,1)$ periodic, and solve for $t\in [0,1]$. $u = 1$ constant so that at $T = 1$, the tracer should be advection around the domain to its original position. This provide us with a test of accuracy of the solution. Since $u$ is constant, we know the departure points a priori thus interpolation is the only source of errors. There is no error in time, we fix the timestep constant as 7 (this is an odd number, and $Nx$ is always even, to ensure that we are not landing on a grid point). To investigate the order of convergence for the interpolation method, we vary the spacial resolution. We solve the problem with a power of trigonometric function initial condition:
+We set the domain to be $[0,1)$ periodic, and solve for $t\in [0,1]$. $u = 1$ constant so that at $T = 1$, the tracer should be advection around the domain to its original position. This provide us with a test of accuracy of the solution. Since $u$ is constant, we know the departure points a priori thus interpolation is the only source of errors. There is no error in time, we fix the timestep constant as 7 (this is an odd number, and $Nx$ is always even, to ensure that we are not landing on a grid point). To investigate the order of convergence for the interpolation method, we vary the spacial resolution ($Nx = 8:1024$). Note that our CFL number is larger than one and reaching about 150 when the spatial resolution is the most dense. This corroborate the fact that the \sml\;method is unconditionally stable. We solve the problem with a power of trigonometric function initial condition:
 \begin{align*}
     c(x,0) &= [\sin(\pi*x)]^p \hspace{1cm}\text{with }p = 40.
 \end{align*}
@@ -162,6 +162,19 @@ Wrapping up this section, we have experimentally investigated the nature of the 
 
 
 \section{Semi-Lagrangian Method for 2D Linear Advection}\label{sec:linear_adv}
+We verify the lesson we learn from Section \ref{sec:interp1D} in 2D. We solve again the constant velocity advection problem with $[0,1)\times [0,1)$ with $\ve u = (1,1)$. We again solve to $T = 1$ and compare the solution to the initial condition. We use a 2D trigonometric polynomial as initial condition:
+\begin{align*}
+    c(x,y,0) &= [\sin(\pi*x)\sin(\pi*y)]^p \hspace{1cm}\text{with }p = 2.
+\end{align*}
+We show the resultant convergence order estimate in Fig. \ref{fig:2D_const_adv_all_interp}
+\begin{figure}[H]
+    \centering
+    \includegraphics{figs/2D_const_adv_all_interp}
+    \includegraphics{figs/2D_const_adv_finufft}
+    \caption{}\label{fig:2D_const_adv_all_interp}
+\end{figure}
+
+
 Introduction to the Euler scheme
 
 
